# dbcat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
.chglog/: config.yml
.circleci/: config.yml
.github/workflows/: ci.yml  publish.yml
contrib/amundsen/: catalog_sample_dag.py  sample_catalog_loader.py
contrib/datahub/: export.yml
dbcat/: __init__.py  __main__.py  alembic.ini  amundsen.py  api.py  cli.py  datahub.py  dbcat.py  generators.py  settings.py
dbcat/catalog/: __init__.py  catalog.py  db.py  metadata.py  models.py  mysql_beta_extractor.py  orm.py  pii_types.py  scanners.py  sqlite_extractor.py
dbcat/migrations/: __init__.py  env.py
dbcat/migrations/versions/: 0fed90ee2030_added_service_name_for_oracle.py  3509a9f07432_add_athena_columns.py  377a3427ceb4_add_plugin_column.py  477d6d4b6ad7_add_update_create_columns.py  7d2638f2ab5f_add_tasks_table.py  d1daff1715f7_initial_run.py  d2c711b84996_add_pii_type_enum_to_column.py
dbcat/scanners/: __init__.py  db.py  json.py
dbcat/templates/: database.mdx.jinja2  schema.mdx.jinja2  sidebars.js.jinja2  table.mdx.jinja2
test/: catalog.json  conftest.py  connections.yaml  docker-compose.yml  test_amundsen.py  test_catalog.py  test_cli.py  test_db.py  test_dbcat.py  test_export.py  test_extractor.py  test_generators.py  test_include_exclude.py  test_lineage.py
