[tool.poetry]
name = "dbcat"
version = "0.15.0"
description = "Tokern Data Catalog"
authors = ["Tokern <info@tokern.io>"]
license = "MIT"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Database",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords=["data-catalog","postgres","snowflake","redshift","glue", "bigquery"]
readme="README.md"
homepage="https://tokern.io/"
repository="https://github.com/tokern/dbcat/"


[tool.poetry.dependencies]
python = ">=3.8,<=3.10.8"
click = "*"
PyYAML = "*"
amundsen-databuilder = {extras = ["athena", "bigquery", "glue", "rds", "snowflake"], version = "^7"}
psycopg2 = "^2.9.5"
alembic = "^1.6.5"
snowflake-sqlalchemy = "1.2.4"
sqlalchemy-mixins = "^1.5"
pyhocon = "^0.3.58"
pyathena = {version = "1.11.5", extras = ["sqlalchemy"]}
PyMySQL = "^1.0.2"
SQLAlchemy = "~=1.3.24"
botocore = "~=1.20.23"
pyparsing = "~=2.0"
boto3 = "1.17.23"
typer = "^0.4.0"
dataclasses = {version = ">=0.6", markers="python_version >= '3.6' and python_version < '3.7'"}
acryl-datahub = {version = "^0.8.16", optional = true}
great-expectations = {version = "^0.13.42", optional = true}
pydantic = "^1.8.2"
greenlet = "^2.0.1"
sqlalchemy-utils = "^0.38.3"

[tool.poetry.extras]
datahub = ["acryl-datahub", "great-expectations"]

[tool.poetry.dev-dependencies]
black = "==19.10b0"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
types-PyYAML = "^5.4.3"
types-PyMySQL = "^1.0.0"
pytest-cases = "^3.6.5"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbcat = "dbcat.__main__:app"
